infrastructur-aws/eks-main-cluster/security.tf
################################
# Datei für AWS Security Group #
################################
# 1- Erstellung von zwei Sicherheitsgruppen für zwei Worker-Knotengruppen
resource "aws_security_group" "worker_group_mgmt_one" {
  name_prefix = "worker_group_mgmt_one"
  vpc_id      = module.vpc.vpc_id

  ingress {
    # erlaubnis nur 22 Ports für die SSH-Verbindung
    from_port = 22
    to_port   = 22
    protocol  = "tcp"
    # Der SSH-Zugriff Beschränkung für den CIDR-Block 10.0.0.0/8
    cidr_blocks = [
      "10.0.0.0/8"
    ]
  }
}
resource "aws_security_group" "worker_group_mgmt_two" {
  name_prefix = "worker_group_mgmt_two"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8"
    ]
  }
}

resource "aws_security_group" "all_worker_mgmt" {
  name_prefix = "all_worker_management"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8"
    ]
  }
}
